add new client-worker endpoint
